[SQONE-519]: Handle site header nav flyout keyboard interactivity.

--- a/wp-content/themes/core/components/site_header/css/skip-link.pcss
+++ b/wp-content/themes/core/components/site_header/css/skip-link.pcss
@@ -28,4 +28,9 @@
 		background-color: var(--color-bgd);
 		color: var(--color-text);
 	}
+
+	/* CASE: The Site Header Nav Flyout is active so this link is irrelevant. */
+	.c-site-header--nav-active & {
+		display: none;
+	}
 }
