--- a/wp-content/themes/core/components/navigation/css/site-header.pcss
+++ b/wp-content/themes/core/components/navigation/css/site-header.pcss
@@ -133,6 +133,9 @@
 
 .c-nav-primary__list-child {
 	display: none;
+	max-height: 0;
+	overflow: hidden;
+	position: relative;
 
 	@media(--viewport-full) {
 		position: absolute;
@@ -140,11 +143,13 @@
 		left: calc(-1 * var(--spacer-40));
 		width: var(--grid-3-col);
 		margin: 12px calc(-1 * var(--spacer-40)) 0 0;
-		padding: var(--spacer-30) var(--spacer-40);
+		padding: 0 var(--spacer-40);
 		border-radius: var(--border-radius-base);
-		border: 1px solid var(--color-border);
+		border: 1px solid transparent;
 		background: var(--color-bgd);
-		box-shadow: var(--box-shadow-10);
+		box-shadow: none;
+		/* On desktop we want to show the border & box shadow as part of the slide-down revea, so this matches that timing. */
+		transition: border-color 250ms 25ms ease-in-out, box-shadow 250ms 25ms ease-in-out;
 	}
 
 	/* CASE: Last top-level menu item should align it's submenu right to prevent overflowing the viewport. */
@@ -155,9 +160,14 @@
 		}
 	}
 
-	/* CASE: This submenu is active */
-	.c-nav-primary__list-child--active & {
+	/* CASE: This submenu is animating */
+	.c-nav-primary__list-child--animating & {
 		display: block;
+
+		@media(--viewport-full) {
+			border-color: var(--color-border);
+			box-shadow: var(--box-shadow-10);
+		}
 	}
 }
 
@@ -170,7 +180,11 @@
 		margin-top: var(--spacer-20);
 
 		&:first-child {
-			margin-top: 0;
+			margin-top: var(--spacer-30);
+		}
+
+		&:last-child {
+			margin-bottom: var(--spacer-30);
 		}
 	}
 }
