[SQONE-519]: documentation clean up.

--- a/wp-content/themes/core/components/navigation/css/site-header.pcss
+++ b/wp-content/themes/core/components/navigation/css/site-header.pcss
@@ -149,7 +149,7 @@
 		background: var(--color-bgd);
 		box-shadow: none;
 
-		/* On desktop we want to show the border & box shadow as part of the slide-down revea, so this matches that timing. */
+		/* On desktop we want to show the border & box shadow as part of the slide-down reveal, so this matches that timing. */
 		transition: border-color 250ms 25ms ease-in-out, box-shadow 250ms 25ms ease-in-out;
 	}
 
