[SQONE-710]: updated acf gallery field for better display in sidebar

--- a/wp-content/themes/core/assets/css/src/admin/_variables.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/_variables.pcss
@@ -9,5 +9,6 @@
 	 * Colors
 	 * ----------------------------------------------------------------------------- */
 
+	--sidebar-width: 312px;
 	--color-bgd-login: var(--color-grey-light);
 }
