[SQONE-710]: updated leadin font

--- a/wp-content/themes/core/components/blocks/links/css/links.pcss
+++ b/wp-content/themes/core/components/blocks/links/css/links.pcss
@@ -87,11 +87,11 @@
 }
 
 /* -----------------------------------------------------------------------------
- * Links: Title
+ * Links: Leadin
  * ----------------------------------------------------------------------------- */
 
-.b-links__title {
-
+.b-links__leadin {
+	@mixin t-overline;
 }
 
 /* -----------------------------------------------------------------------------
