[SQONE-519]: DQA repairs. Force logo images to fix within the logo container.

--- a/wp-content/themes/core/components/site_header/css/site-header.pcss
+++ b/wp-content/themes/core/components/site_header/css/site-header.pcss
@@ -122,6 +122,18 @@
 }
 
 /* -----------------------------------------------------------------------------
+ * Site Header: Logo Figure & Img tag
+ *
+ * 100% height applied to force SVGs to scale properly within the logo container.
+ * ----------------------------------------------------------------------------- */
+
+.c-site-header__logo-img,
+.c-site-header__logo-figure {
+	height: 100%;
+	max-height: var(--site-header-height);
+}
+
+/* -----------------------------------------------------------------------------
  * Site Header: Mobile Nav Flyout Toggle
  * ----------------------------------------------------------------------------- */
 
