--- a/wp-content/themes/core/integrations/swiper/css/_variables.pcss
+++ b/wp-content/themes/core/integrations/swiper/css/_variables.pcss
@@ -1,7 +1,18 @@
 :root {
 	--swiper-theme-color: #007aff;
+
 	--swiper-navigation-size: 44px;
 	--swiper-navigation-color: var(--swiper-theme-color);
+
 	--swiper-pagination-color: var(--swiper-theme-color);
+	--swiper-pagination-bullet-size: 8px;
+	--swiper-pagination-bullet-width: 8px;
+	--swiper-pagination-bullet-height: 8px;
+	--swiper-pagination-bullet-inactive-color: #000;
+	--swiper-pagination-bullet-inactive-opacity: 0.2;
+	--swiper-pagination-bullet-opacity: 1;
+	--swiper-pagination-bullet-horizontal-gap: 4px;
+	--swiper-pagination-bullet-vertical-gap: 6px;
+
 	--swiper-preloader-color: var(--swiper-theme-color);
 }
