Add styles for the default consent field from Gravity Forms.

--- a/wp-content/themes/core/integrations/gravity-forms/index.pcss
+++ b/wp-content/themes/core/integrations/gravity-forms/index.pcss
@@ -23,6 +23,7 @@
 @import "css/controls/file.pcss";
 @import "css/controls/hidden.pcss";
 @import "css/controls/lists.pcss";
+@import "css/controls/consent.pcss";
 @import "css/validation/required.pcss";
 @import "css/validation/success.pcss";
 @import "css/validation/error.pcss";
